# Package metadata
[metadata]
name = lrotree 
version = attr: sklr.__version__
author = Enrique G. Rodrigo  
author_email = enrique.grodrigo@gmail.com
maintainer = Enrique G. Rodrigo 
maintainer_email = enrique.grodrigo@gmail.com
license = MIT
license_file = COPYING
description = Label Ranking Oblique Trees in Python.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = posix

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

# Packaging options
[options]
zip_safe = False  # Make cimport work for header files
include_package_data = True
packages = find:

# Minimum runtime requirements
python_requires = >=3.6
install_requires =
    numpy>=1.17.3
    scipy>=1.3.2
    scikit-learn>=0.23.0

# Test suite options
[tool:pytest]
addopts =
    # TODO: Remove and activate the "disable-pytest-warnings" and
    # "doctest-modules" flags when the modules have been reviewed
    --disable-pytest-warnings
    # --doctest-modules
    --ignore docs
    -rxXs

# Ignore trailing whitespaces and ellipsis markers in
# the interactive examples to avoid mistaken failures
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS

# Code coverage options
[coverage:run]
branch = True
source = sklr
parallel = True
omit =
    setup.py
    */sklr/utils/*
    */sklr/_build_utils/*
